tests/machine/x/pl/dataset_where_filter.pl
:- style_check(-singleton).
main :-
    % unsupported: unsupported primary
    % unsupported: unsupported primary
    write("--- Adults ---"),
    nl,
    (member(Person, Adults),
        % unsupported: print with one arg supported
        true.
    :- initialization(main, main).
